Fix spacing issue with delete button on edit page

--- a/resources/style.css
+++ b/resources/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 #new-user-form, #edit-user-form {
-  margin: 50px auto 0 auto;
+  margin: 50px auto;
   width: 75%;
 }
 
@@ -77,8 +77,8 @@ body {
   border: #fff;
 }
 
-.butn-delete {
-  margin-left: 25%;
+.butn-edit-group {
+  padding: 0;
 }
 
 .butn-edit-width {
